# new-frontiers

./: 404.html  Cargo.toml  Dockerfile  Makefile  README.md  Readme_migrations  Readme_migrations.md  Readme_upgrades.md  Testnet_  aura  customSpecRaw.json  deploy.sh  docker-compose.yml  evm.html  file  file2  gran  index.html  keys.json  main_account_aura  main_account_gran  my-chainspec.json  myCustomSpec.json  node  overview.html  rust-setup.html  rustup toolchain install nightly-2021-05  spec.json  testnet.json  testnet1.json
.devcontainer/: Cargo.toml
.github/workflows/: check.yml
assets/css/: 0.styles.6e6673f6.css
assets/js/: 10.5cbfdcb7.js  11.fe41046f.js  7.b5506ce8.js  8.18603b21.js  9.be3bcb74.js  app.cc1792c3.js
client/consensus/: Cargo.toml
client/consensus/consensus-pow/: Cargo.toml
client/consensus/consensus-pow/src/: lib.rs  worker.rs
client/consensus/ethash/: Cargo.toml
client/consensus/ethpow/: Cargo.toml
client/consensus/ethpow/src/: error.rs  lib.rs
client/consensus/fc-consensus/: Cargo.toml
client/consensus/src/: lib.rs
client/custom-manual-seal/: Cargo.toml  Cargo.toml.orig
client/custom-manual-seal/src/: lib.rs  rpc.rs  seal_block.rs
client/db/: Cargo.toml
client/db/src/: lib.rs  utils.rs
client/ethash-rpc/: Cargo.toml
client/ethash-rpc/src/: error.rs  lib.rs
client/mapping-sync/: Cargo.toml
client/mapping-sync/src/: lib.rs  worker.rs
client/rpc/: Cargo.toml
client/rpc-core/src/: eth.rs  eth_pubsub.rs  lib.rs  net.rs  web3.rs
client/rpc-core/src/types/: account_info.rs  block.rs  block_number.rs  bytes.rs  call_request.rs  filter.rs  index.rs  log.rs  mod.rs  pubsub.rs  receipt.rs  sync.rs  transaction.rs  transaction_request.rs  work.rs
client/rpc/src/: eth.rs  eth_pubsub.rs  lib.rs
client/rpc/src/overrides/: mod.rs  schema_v1_override.rs
client/sc-cli/: Cargo.toml  Cargo.toml.orig
client/sc-cli/src/commands/: revert_cmd.rs
docker/aura-grandpa/: docker-compose.yml
docker/aura-grandpa/data/: test1.sh
docker/aura-grandpa/data/evm_test/: package-lock.json
docker/genefinance/: docker-compose.yml  package-lock.json  test1.js  test2.js
docker/genefinance/data/: validator-spec.json
docker/migration-test/: .bash_history  docker-compose.yml  docker-install.sh
docker/migration-test/data/: test1.sh
docker/migration-test/data/bootnode/network/: secret_ed25519
docker/migration-test/data/evm_test/: package.json
docker/migration-test/keys/: file3  filetmp  gran  holder  receiver  validator-02-aura
docker/migration-test/mvs-vm-cli/: .gitignore  Makefile  README.md  networks.go  print.py  rpc.go  transfers.sh  web3.go
docker/mvs-vm-cli-test/: customSpecRaw.json  docker-compose.yml  test1.js
docker/mvs-vm-cli-test/data/: bootnode-spec.json  validator-spec.json.tmp
docker/mvs-vm-cli-test/keys/: aura  file  file2  sudo  validator-01-aura  validator-02-aura  validator-02-grandpa
docker/web3test/: docker-compose.yml
docker/web3test/evm_test/: package-lock.json  run.sh  test1.js  test2.js
docs/: commands  evm.md  index.md  migration  overview.md  package.json  rust-setup.md
docs/.vuepress/: config.js
docs/rpc/: rpc.md
ethash-pow/: Cargo.toml
frame/dynamic-fee/: Cargo.toml
frame/dynamic-fee/src/: lib.rs
frame/ethereum/: Cargo.toml
frame/ethereum/src/: lib.rs  mock.rs  tests.rs
frame/evm/: Cargo.toml
frame/evm/precompile/blake2/: Cargo.toml
frame/evm/precompile/blake2/src/: eip_152.rs  lib.rs
frame/evm/precompile/bn128/: Cargo.toml
frame/evm/precompile/dispatch/: Cargo.toml
frame/evm/precompile/ed25519/: Cargo.toml
frame/evm/precompile/modexp/: Cargo.toml
frame/evm/precompile/sha3fips/: Cargo.toml
frame/evm/precompile/simple/: Cargo.toml
frame/evm/src/: backend.rs  lib.rs  tests.rs
frame/evm/src/runner/: mod.rs  stack.rs
frame/support/: Cargo.toml
k8s/: REAME.md
k8s/boot-node/: deployment-bootnode.yaml  service.yaml
k8s/validator/: deployment-validator.yaml  service.yaml
metaverse/: Dockerfile  README.md
metaverse-vanilla/: Dockerfile  README.md
metaverse-vanilla/node/: Cargo.toml
metaverse-vanilla/node/src/: chain_spec.rs  command.rs
metaverse/examples/contract-erc20/: README.md  package-lock.json  package.json
metaverse/examples/contract-hello/: package-lock.json  package.json
metaverse/node/: Cargo.toml
metaverse/node/src/: chain_spec.rs  command.rs  rpc.rs  service.rs
metaverse/runtime/: Cargo.toml
metaverse/runtime/src/: lib.rs
metaverse/test-utils/client/: Cargo.toml
metaverse/test-utils/client/src/: lib.rs
node/: Cargo.toml
node/src/: - Enormous quantity of transactions not  chain_spec.rs  cli.rs  command.rs  rpc.rs  service.rs
pallets/migrations/: Cargo.toml  README.md
pallets/migrations/src/: lib.rs  mock.rs  tests.rs
pow/consensus-pow/src/: lib.rs  worker.rs
pow/ethash-pow/: Cargo.toml
pow/ethash-pow/src/: lib.rs
pow/ethash-rpc/: Cargo.toml
pow/ethash-rpc/src/: work.rs
pow/ethpow/src/: error.rs
primitives/array-bytes/: Cargo.toml
primitives/consensus/: Cargo.toml
primitives/consensus/src/: lib.rs
primitives/ethereum-primitives/: Cargo.toml
primitives/evm/: Cargo.toml
primitives/evm/src/: lib.rs  precompile.rs
primitives/rpc/: Cargo.toml
primitives/rpc/src/: lib.rs
primitives/storage/: Cargo.toml
primitives/storage/src/: lib.rs
rpc/: rpc.html
runtime/: Cargo.toml
runtime/src/: lib.rs  migrations.rs
template/: Dockerfile  README.md
template/node/: Cargo.toml
template/node/src/: chain_spec.rs
template/runtime/: Cargo.toml
template/runtime/src/: lib.rs
template/test-utils/client/: Cargo.toml
ts-tests/: .gitignore  README.md
ts-tests/frontier-test-specs/: simple-specs.json
ts-tests/tests/: test-balance.ts  test-block.ts  test-bloom.ts  test-contract-methods.ts  test-contract-storage.ts  test-contract.ts  test-deprecated.ts  test-filter-api.ts  test-gas.ts  test-nonce.ts  test-pending-pool.ts  test-precompiles.ts  test-revert-reason.ts  test-revert-receipt.ts  test-rpc-constants.ts  test-state-root.ts  test-subscription.ts  test-web3api.ts  util.ts
(+6 files in other folders)
