[workspace]
members = [
	"frame/dynamic-fee",
	"frame/ethereum",
	"frame/evm",
	"frame/evm/precompile/sha3fips",
	"frame/evm/precompile/simple",
	"frame/evm/precompile/modexp",
	"frame/evm/precompile/ed25519",
	"frame/evm/precompile/bn128",
	"frame/evm/precompile/blake2",
	"frame/evm/precompile/dispatch",
	"client/consensus",
	"client/rpc-core",
	"client/rpc",
	"client/db",
	"client/mapping-sync",
	"primitives/consensus",
	"primitives/evm",
	"primitives/rpc",
	"metaverse/node",
	"metaverse/runtime",
	"metaverse/test-utils/client",
	"primitives/array-bytes"
]