[package]
name = "metaverse"
version = "3.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Metaverse"
edition = "2018"
license = "Unlicense"
build = "build.rs"
homepage = "https://substrate.dev"
repository = "https://github.com/mvs-org/substrate/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
futures = "0.3.4"
log = "0.4.8"
structopt = "0.3.8"
jsonrpc-core = "15.0.0"
jsonrpc-pubsub = "15.0.0"
hex-literal = "0.3.1"
sp-api = { git = "https://github.com/mvs-org/substrate.git", branch = "new-frontiers" }
sp-blockchain = { git = "https://github.com/mvs-org/substrate.git", branch = "new-frontiers" }
sc-rpc-api = { git = "https://github.com/mvs-org/substrate.git", branch = "new-frontiers" }
sc-rpc = { git = "https://github.com/mvs-org/substrate.git", branch = "new-frontiers" }
substrate-frame-rpc-system = { git = "https://github.com/mvs-org/substrate.git", branch = "new-frontiers" }
pallet-transaction-payment-rpc = { git = "https://github.com/mvs-org/substrate.git", branch = "new-frontiers" }
sc-cli = { git = "https://github.com/mvs-org/substrate.git", branch = "new-frontiers" }
sp-core = { git = "https://github.com/mvs-org/substrate.git", branch = "new-frontiers" }
sc-executor = { git = "https://github.com/mvs-org/substrate.git", branch = "new-frontiers" }
sc-service = { git = "https://github.com/mvs-org/substrate.git", branch = "new-frontiers" }
sp-inherents = { git = "https://github.com/mvs-org/substrate.git", branch = "new-frontiers" }
sc-transaction-pool = { git = "https://github.com/mvs-org/substrate.git", branch = "new-frontiers" }
sp-transaction-pool = { git = "https://github.com/mvs-org/substrate.git", branch = "new-frontiers" }
sc-network = { git = "https://github.com/mvs-org/substrate.git", branch = "new-frontiers" }
sc-consensus-aura = { git = "https://github.com/mvs-org/substrate.git", branch = "new-frontiers" }
sp-consensus-aura = { git = "https://github.com/mvs-org/substrate.git", branch = "new-frontiers" }
sc-consensus-manual-seal = { git = "https://github.com/mvs-org/substrate.git", branch = "new-frontiers" }
sp-consensus = { git = "https://github.com/mvs-org/substrate.git", branch = "new-frontiers" }
sc-consensus = { git = "https://github.com/mvs-org/substrate.git", branch = "new-frontiers" }
sp-timestamp = { git = "https://github.com/mvs-org/substrate.git", branch = "new-frontiers" }
pallet-evm = { path = "../../frame/evm" }
pallet-ethereum = { path = "../../frame/ethereum" }
sc-finality-grandpa = { git = "https://github.com/mvs-org/substrate.git", branch = "new-frontiers" }
sp-finality-grandpa = { git = "https://github.com/mvs-org/substrate.git", branch = "new-frontiers" }
sc-client-api = { git = "https://github.com/mvs-org/substrate.git", branch = "new-frontiers" }
sp-runtime = { git = "https://github.com/mvs-org/substrate.git", branch = "new-frontiers" }
sc-basic-authorship = { git = "https://github.com/mvs-org/substrate.git", branch = "new-frontiers" }
sp-block-builder = { git = "https://github.com/mvs-org/substrate.git", branch = "new-frontiers" }
sc-telemetry = { git = "https://github.com/mvs-org/substrate.git", branch = "new-frontiers" }

fc-consensus = { path = "../../client/consensus" }
fp-consensus = { path = "../../primitives/consensus" }
frontier-template-runtime = { path = "../runtime", default-features = false, features = ["std"] }
fc-rpc = { path = "../../client/rpc" }
fp-rpc = { path = "../../primitives/rpc" }
array-bytes = { path = "../../primitives/array-bytes" }
fc-rpc-core = { path = "../../client/rpc-core" }
fc-db = { path = "../../client/db" }
fc-mapping-sync = { path = "../../client/mapping-sync" }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/mvs-org/substrate.git", branch = "new-frontiers" }

[features]
default = ["aura"]
aura = ["frontier-template-runtime/aura"]
manual-seal = ["frontier-template-runtime/manual-seal"]

