[package]
authors = ['Metaverse Foundation <https://github.com/mvs-org>']
build = 'build.rs'
description = 'MetaverseVM node'
edition = '2018'
homepage = 'https://mvs.org'
license = 'Unlicense'
name = 'metaversevm'
repository = 'https://github.com/mvs-org/metaverse-vm'
version = '0.12.1'

[[bin]]
name = 'metaversevm'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-build-script-utils = '3.0.0'

[dependencies]
futures = "0.3.4"
log = "0.4.8"
jsonrpc-core = '15.1.0'
jsonrpc-pubsub = "15.1.0"
structopt = '0.3.8'
# Substrate dependencies
# frame-benchmarking = '3.1.0'
# frame-benchmarking-cli = '3.0.0'
pallet-transaction-payment-rpc = '3.0.0'
sc-basic-authorship = '0.9.0'
sc-cli = { path = '../client/sc-cli', features = ['wasmtime']}
sc-client-api = '3.0.0'
sc-consensus = '0.9.0'
sc-consensus-aura = '0.9.0'
sc-executor = { features = ['wasmtime'], version = '0.9.0' }
sc-finality-grandpa = '0.9.0'
sc-keystore = '3.0.0'
sc-rpc = '3.0.0'
sc-network = '0.9.0'
sc-rpc-api = '0.9.0'
sc-service = { features = ['wasmtime'], version = '0.9.0' }
sc-telemetry = '3.0.0'
sc-transaction-pool = '3.0.0'
sp-api = '3.0.0'
sp-block-builder = '3.0.0'
sp-blockchain = '3.0.0'
sp-consensus = '0.9.0'
sp-consensus-aura = '0.9.0'
sp-core = '3.0.0'
sp-finality-grandpa = '3.0.0'
sp-inherents = '3.0.0'
sp-runtime = '3.0.0'
sp-transaction-pool = '3.0.0'
sp-timestamp = '3.0'
substrate-frame-rpc-system = '3.0.0'
pallet-im-online = { version = "3.0", default-features = false }
sp-authority-discovery = { version = "3.0" }
pallet-authority-discovery = { version = "3.0" }

pallet-evm = { version = "5.0.0", git = "https://github.com/mvs-org/substrate.git", branch = "EVMv5" }
pallet-ethereum = { version = "3.0.0", git = "https://github.com/mvs-org/substrate.git", branch = "EVMv5" }
fp-rpc = { version = "2.1.0", git = "https://github.com/mvs-org/substrate.git", branch = "EVMv5"}
fc-rpc = { version = "2.0.0", git = "https://github.com/mvs-org/substrate.git", branch = "EVMv5" }
fc-rpc-core = { version = "1.1.0", git = "https://github.com/mvs-org/substrate.git", branch = "EVMv5"}
fc-db = { version = "2.0.0", git = "https://github.com/mvs-org/substrate.git", branch = "EVMv5" }
fc-consensus = { version = "2.0.0", git = "https://github.com/mvs-org/substrate.git", branch = "EVMv5" }
fc-mapping-sync = { version = "2.0.0", git = "https://github.com/mvs-org/substrate.git", branch = "EVMv5" }


# local dependencies
metaverse-vm-runtime = { path = '../runtime', version = '0.2.1', features = ["std"]}

[features]
default = []
# runtime-benchmarks = ['metaverse-vm-runtime/runtime-benchmarks']
