[package]
authors = ['Metaverse Foundation <https://github.com/mvs-org>']
build = 'build.rs'
description = 'MetaverseVM node'
edition = '2021'
homepage = 'https://mvs.org'
license = 'Unlicense'
name = 'metaversevm'
repository = 'https://github.com/mvs-org/metaverse-vm'
version = '1.0.0'

[[bin]]
name = 'metaversevm'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }

[dependencies]
futures = "0.3.21"
log = "0.4.17"
async-trait = "0.1"
clap = { version = "3.1", features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3.1", features = ["derive"] }
jsonrpsee = { version = "0.14.0", features = ["server", "macros"] }

# Substrate dependencies
# frame-benchmarking = '3.1.0'
# frame-benchmarking-cli = '3.0.0'
pallet-transaction-payment-rpc = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sc-basic-authorship = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sc-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25", features = ['wasmtime']}
sc-client-api = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sc-consensus = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sc-consensus-aura = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25", features = ['wasmtime']}
sc-finality-grandpa = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sc-keystore = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sc-rpc = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sc-network = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sc-rpc-api = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25", features = ['wasmtime']}
sc-telemetry = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sc-transaction-pool = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sp-api = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sp-block-builder = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sp-blockchain = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sp-consensus = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sp-consensus-aura = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sp-core = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sp-finality-grandpa = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sp-inherents = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sp-runtime = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sp-transaction-pool = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
sp-timestamp = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
substrate-frame-rpc-system = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
pallet-im-online = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25", default-features = false }
sp-authority-discovery = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }
pallet-authority-discovery ={git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.25" }

# EVM pallet
pallet-evm = { git = "https://github.com/paritytech/frontier.git", branch = "polkadot-v0.9.25" }
pallet-ethereum = { git = "https://github.com/paritytech/frontier.git", branch = "polkadot-v0.9.25" }
fc-rpc = { git = "https://github.com/paritytech/frontier.git", branch = "polkadot-v0.9.25" }
fc-rpc-core = { git = "https://github.com/paritytech/frontier.git", branch = "polkadot-v0.9.25"}
fc-db = { git = "https://github.com/paritytech/frontier.git", branch = "polkadot-v0.9.25" }
fc-consensus = { git = "https://github.com/paritytech/frontier.git", branch = "polkadot-v0.9.25" }
fp-evm = { git = "https://github.com/paritytech/frontier.git", branch = "polkadot-v0.9.25" }
fp-rpc = { git = "https://github.com/paritytech/frontier.git", branch = "polkadot-v0.9.25"}
fc-mapping-sync = { git = "https://github.com/paritytech/frontier.git", branch = "polkadot-v0.9.25" }
fp-storage = { git = "https://github.com/paritytech/frontier.git", branch = "polkadot-v0.9.25" }
fp-dynamic-fee = { git = "https://github.com/paritytech/frontier.git", branch = "polkadot-v0.9.25" }
fp-consensus = { git = "https://github.com/paritytech/frontier.git", branch = "polkadot-v0.9.25" }

# local dependencies
metaverse-vm-runtime = { path = '../runtime', version = '1.0.0', features = ["std"]}

[features]
default = []
# runtime-benchmarks = ['metaverse-vm-runtime/runtime-benchmarks']
