[package]
authors = ['Metaverse Foundation <https://github.com/mvs-org>']
edition = '2018'
homepage = 'https://mvs.org'
license = 'Unlicense'
name = 'metaverse-vm-runtime'
repository = 'https://github.com/mvs-org/metaverse-vm'
version = '0.2.1'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-wasm-builder = '4.0.0'

[dependencies]
codec = { default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '2.0.0' }
hex-literal = { optional = true, version = '0.3.1' }
serde = { version = "1.0.119", optional = true, features = ["derive"] }

# Substrate dependencies
# frame-benchmarking = { default-features = false, optional = true, version = '3.0.0' }
# frame-system-benchmarking = { default-features = false, optional = true, version = '3.0.0' }
frame-executive = { default-features = false, version = '3.0.0' }
frame-support = { default-features = false, version = '3.0.0' }
frame-system = { default-features = false, version = '3.0.0' }
frame-system-rpc-runtime-api = { default-features = false, version = '3.0.0' }
pallet-aura = { default-features = false, version = '3.0.0' }
pallet-balances = { default-features = false, version = '3.0.0' }
pallet-authorship = { default-features = false, version = '3.0.0' }
pallet-session = { default-features = false, version = '3.0.0', features = ["historical"] }
pallet-grandpa = { default-features = false, version = '3.0.0' }
pallet-randomness-collective-flip = { default-features = false, version = '3.0.0' }
pallet-sudo = { default-features = false, version = '3.0.0' }
pallet-timestamp = { default-features = false, version = '3.0.0' }
pallet-transaction-payment = { default-features = false, version = '3.0.0' }
pallet-transaction-payment-rpc-runtime-api = { default-features = false, version = '3.0.0' }
sp-api = { default-features = false, version = '3.0.0' }
sp-block-builder = { default-features = false, version = '3.0.0' }
sp-consensus-aura = { default-features = false, version = '0.9.0' }
sp-core = { default-features = false, version = '3.0.0' }
sp-io = { default-features = false, version = "3.0.0" }
sp-inherents = { default-features = false, version = '3.0.0' }
sp-offchain = { default-features = false, version = '3.0.0' }
sp-runtime = { default-features = false, version = '3.0.0' }
sp-session = { default-features = false, version = '3.0.0' }
sp-std = { default-features = false, version = '3.0.0' }
sp-transaction-pool = { default-features = false, version = '3.0.0' }
sp-version = { default-features = false, version = '3.0.0' }

pallet-evm = { default-features = false, version = "5.0.0", git = "https://github.com/mvs-org/substrate.git", branch = "EVMv5" }
pallet-ethereum = { default-features = false, version = "3.0.0", git = "https://github.com/mvs-org/substrate.git", branch = "EVMv5" }
fp-rpc = { default-features = false, version = "2.1.0", git = "https://github.com/mvs-org/substrate.git", branch = "EVMv5" }
pallet-evm-precompile-bn128 = { default-features = false, version = "2.0.0", git = "https://github.com/mvs-org/substrate.git", branch = "EVMv5"}
pallet-evm-precompile-modexp = { default-features = false, version = "2.0.0", git = "https://github.com/mvs-org/substrate.git", branch = "EVMv5" }
pallet-evm-precompile-sha3fips = { default-features = false, version = "2.0.0", git = "https://github.com/mvs-org/substrate.git", branch = "EVMv5" }
pallet-evm-precompile-simple = { default-features = false, version = "2.0.0", git = "https://github.com/mvs-org/substrate.git", branch = "EVMv5" }

sp-staking = { version = "3.0", default-features = false }
pallet-staking = { version = "3.0", default-features = false }
pallet-staking-reward-curve = { version = "3.0" }
#pallet-treasury = { version = "3.0", default-features = false }
sp-authority-discovery = { version = "3.0", default-features = false }
pallet-authority-discovery = { version = "3.0", default-features = false }
pallet-offences = { version = "3.0.0", default-features = false }
pallet-im-online = { version = "3.0", default-features = false }
#sp-npos-elections = { version = "3.0", default-features = false }
pallet-collective = { version = "3.0", default-features = false, features = ["runtime-benchmarks"] }
pallet-identity = { version = "3.0.0", default-features = false }

[features]
default = ["std"]
# runtime-benchmarks = [
#     'frame-benchmarking',
#     'frame-support/runtime-benchmarks',
#     'frame-system-benchmarking',
#     'frame-system/runtime-benchmarks',
#     'hex-literal',
#     'pallet-balances/runtime-benchmarks',
#     'pallet-timestamp/runtime-benchmarks',
#     'sp-runtime/runtime-benchmarks',
# ]
std = [
    "pallet-evm-precompile-bn128/std", 
    "pallet-evm-precompile-modexp/std", 
    "pallet-evm-precompile-sha3fips/std",
    "pallet-evm-precompile-simple/std",
    'codec/std',
    'frame-executive/std',
    'frame-support/std',
    'frame-system-rpc-runtime-api/std',
    'frame-system/std',
    'fp-rpc/std',
    'pallet-evm/std',
    'pallet-ethereum/std',
    'pallet-aura/std',
    'pallet-balances/std',
    "pallet-authorship/std",
    "pallet-session/std",
    'pallet-grandpa/std',
    'pallet-randomness-collective-flip/std',
    'pallet-sudo/std',
    'pallet-timestamp/std',
    'pallet-transaction-payment-rpc-runtime-api/std',
    'pallet-transaction-payment/std',
    'serde',
    'sp-api/std',
    'sp-block-builder/std',
    'sp-consensus-aura/std',
    'sp-core/std',
    "sp-io/std",
    'sp-inherents/std',
    'sp-offchain/std',
    'sp-runtime/std',
    'sp-session/std',
    'sp-std/std',
    'sp-transaction-pool/std',
    'sp-version/std',
    "sp-staking/std",
	"pallet-staking/std",
    #"pallet-treasury/std",
    "pallet-offences/std",
    "pallet-im-online/std",
    "sp-authority-discovery/std",
	"pallet-authority-discovery/std",
    #"sp-npos-elections/std",
    "pallet-collective/std",
    "pallet-identity/std",
]

