[package]
authors = ['Metaverse Foundation <https://github.com/mvs-org>']
edition = '2018'
homepage = 'https://mvs.org'
license = 'Unlicense'
name = 'metaverse-vm-runtime'
repository = 'https://github.com/mvs-org/new-frontiers'
version = '0.2.1'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-wasm-builder = '4.0.0'

[dependencies]
codec = { default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '2.0.0' }
hex-literal = { optional = true, version = '0.3.1' }
serde = { version = "1.0.119", optional = true, features = ["derive"] }

## Substrate FRAME Dependencies
# frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", default-features = false, optional = true }
# frame-system-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", default-features = false, optional = true }
frame-executive = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", default-features = false }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", default-features = false }
# frame-try-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true, branch = "polkadot-v0.9.24" }

# Substrate dependencies
pallet-aura = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", default-features = false}
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", default-features = false}
pallet-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", default-features = false}
pallet-session = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", default-features = false, features = ["historical"] }
pallet-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", default-features = false}
pallet-randomness-collective-flip = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", default-features = false}
pallet-sudo = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", default-features = false}
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", default-features = false}
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", default-features = false}
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", default-features = false}
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", default-features = false}
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", default-features = false}
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", default-features = false}
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", default-features = false}
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", default-features = false}
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", default-features = false}
sp-offchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", default-features = false}
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", default-features = false}
sp-session = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", default-features = false}
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", default-features = false}
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", default-features = false}
sp-version = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", default-features = false}

# EVM pallets
pallet-dynamic-fee = { default-features = false, version = "3.0.0", git = "https://github.com/mvs-org/substrate.git", branch = "EVMv5" }
pallet-evm = { default-features = false, version = "5.0.0", git = "https://github.com/mvs-org/substrate.git", branch = "EVMv5" }
pallet-ethereum = { default-features = false, version = "3.0.0", git = "https://github.com/mvs-org/substrate.git", branch = "EVMv5" }
fp-rpc = { default-features = false, version = "2.1.0", git = "https://github.com/mvs-org/substrate.git", branch = "EVMv5" }
pallet-evm-precompile-bn128 = { default-features = false, version = "2.0.0", git = "https://github.com/mvs-org/substrate.git", branch = "EVMv5"}
pallet-evm-precompile-modexp = { default-features = false, version = "2.0.0", git = "https://github.com/mvs-org/substrate.git", branch = "EVMv5" }
pallet-evm-precompile-sha3fips = { default-features = false, version = "2.0.0", git = "https://github.com/mvs-org/substrate.git", branch = "EVMv5" }
pallet-evm-precompile-simple = { default-features = false, version = "2.0.0", git = "https://github.com/mvs-org/substrate.git", branch = "EVMv5" }

sp-staking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", default-features = false }
pallet-staking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", default-features = false }
pallet-staking-reward-curve = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24"  }

sp-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", default-features = false }
pallet-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", default-features = false }
pallet-offences = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", default-features = false }
pallet-im-online = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", default-features = false }
#pallet-treasury = { version = "3.0", default-features = false }
# pallet-election-provider-multi-phase = { version = "3.0", default-features = false}
# pallet-elections-phragmen = { version = "4.0", default-features = false}
# sp-npos-elections = { version = "3.0", default-features = false }
pallet-collective = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", default-features = false, features = ["runtime-benchmarks"] }
pallet-identity = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", default-features = false }

[features]
default = ["std"]
# runtime-benchmarks = [
#     'frame-benchmarking',
#     'frame-support/runtime-benchmarks',
#     'frame-system-benchmarking',
#     'frame-system/runtime-benchmarks',
#     'hex-literal',
#     'pallet-balances/runtime-benchmarks',
#     'pallet-timestamp/runtime-benchmarks',
#     'sp-runtime/runtime-benchmarks',
# ]
std = [
    "pallet-evm-precompile-bn128/std", 
    "pallet-evm-precompile-modexp/std", 
    "pallet-evm-precompile-sha3fips/std",
    "pallet-evm-precompile-simple/std",
    'codec/std',
    'frame-executive/std',
    'frame-support/std',
    'frame-system-rpc-runtime-api/std',
    'frame-system/std',
    'fp-rpc/std',
    'pallet-evm/std',
    'pallet-ethereum/std',
    'pallet-aura/std',
    'pallet-balances/std',
    "pallet-authorship/std",
    "pallet-session/std",
    'pallet-grandpa/std',
    'pallet-randomness-collective-flip/std',
    'pallet-sudo/std',
    'pallet-timestamp/std',
    'pallet-transaction-payment-rpc-runtime-api/std',
    'pallet-transaction-payment/std',
    'serde',
    'sp-api/std',
    'sp-block-builder/std',
    'sp-consensus-aura/std',
    'sp-core/std',
    "sp-io/std",
    'sp-inherents/std',
    'sp-offchain/std',
    'sp-runtime/std',
    'sp-session/std',
    'sp-std/std',
    'sp-transaction-pool/std',
    'sp-version/std',
    "sp-staking/std",
	"pallet-staking/std",
    #"pallet-treasury/std",
    "pallet-offences/std",
    "pallet-im-online/std",
    "sp-authority-discovery/std",
	"pallet-authority-discovery/std",
    # "pallet-elections-phragmen/std",
    # "pallet-election-provider-multi-phase/std",
    # "sp-npos-elections/std",
    "pallet-collective/std",
    "pallet-identity/std",
]

